Add a placeholder homepage

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,8 +2,7 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
+    border-top: 5px solid $green-color-dark;
     min-height: 56px;
 
     // Positioning context for the mobile navigation icon
@@ -20,7 +19,7 @@
 
     &,
     &:visited {
-        color: $grey-color-dark;
+        color: $green-color-dark;
     }
 }
 
@@ -47,7 +46,7 @@
         top: 9px;
         right: $spacing-unit / 2;
         background-color: $background-color;
-        border: 1px solid $grey-color-light;
+        border: 1px solid $green-color-light;
         border-radius: 5px;
         text-align: right;
 
@@ -65,7 +64,7 @@
                 height: 15px;
 
                 path {
-                    fill: $grey-color-dark;
+                    fill: $green-color-dark;
                 }
             }
         }
@@ -98,7 +97,6 @@
  * Site footer
  */
 .site-footer {
-    border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
 }
 
@@ -115,7 +113,7 @@
 
 .footer-col-wrapper {
     font-size: 15px;
-    color: $grey-color;
+    color: $green-color;
     margin-left: -$spacing-unit / 2;
     @extend %clearfix;
 }
@@ -172,7 +170,9 @@
 }
 
 .page-heading {
-    font-size: 20px;
+    font-size: 60px;
+    line-height: 1em;
+    margin-bottom: 60px;
 }
 
 .post-list {
@@ -186,7 +186,7 @@
 
 .post-meta {
     font-size: $small-font-size;
-    color: $grey-color;
+    color: $green-color;
 }
 
 .post-link {
